Detalles de formato y titulo

--- a/myarticle.tex.j2
+++ b/myarticle.tex.j2
@@ -67,10 +67,10 @@ labelfont=bf,textfont=it}
 ((* endblock commands *))
 
 ((* block title *))
-\title{Trabajo Práctico\\``Errores de redondeo\\y propagación de errores''}
+\title{Trabajo Práctico\\``Sistemas de ecuaciones lineales''}
 ((* endblock title *))
 ((* block date *))
-\date{1er. Cuatrimestre 2021\\Sábado, 10 de Abril}
+\date{1er. Cuatrimestre 2021\\Sábado, 24 de Abril}
 ((* endblock date *))
 ((* block author *))
 \author{Araneda, Alejandro – eloscurodeefeso@hotmail.com}
@@ -113,7 +113,8 @@ labelfont=bf,textfont=it}
 
 \section{}\label{ane:monitoreo}
 A continuación listamos en extenso el módulo de Python que
-contiene la función auxiliar {\ttfamily tabla()}.
+contiene las funciones auxiliares {\ttfamily tabla()},
+{\ttfamily format_vec()} y {\ttfamily format_err()}.
 
 \lstinputlisting[language=Python]{auxiliares.py}
 
