Sacar latex de tablas largas

--- a/myarticle.tex.j2
+++ b/myarticle.tex.j2
@@ -114,7 +114,7 @@ labelfont=bf,textfont=it}
 \section{}\label{ane:monitoreo}
 A continuación listamos en extenso el módulo de Python que
 contiene las funciones auxiliares {\ttfamily tabla()},
-{\ttfamily format_vec()} y {\ttfamily format_err()}.
+{\ttfamily format\_vec()} y {\ttfamily format\_err()}.
 
 \lstinputlisting[language=Python]{auxiliares.py}
 
